faltantes de pagina con bootstrap

--- a/PAGINA CON BOOTSTRAP/index.html
+++ b/PAGINA CON BOOTSTRAP/index.html
@@ -15,7 +15,7 @@
   <body>
     <section>
         <div class="row no-gutters">
-            <div class="col-lg-1">
+            <div class="col-lg-1 border-right">
                 <div class="d-flex h-100">
                     <div class="align-self-center mx-auto">
                         <i class="icon ion-md-search lead-xl"></i>
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-1">
+          <div class="col-lg-1 border-right">
             <div class="d-flex">
               <ul class="list-unstyled align-self-center mx-auto">
                 <li class="sideways"><a href="#" class="text-light">INSTAGRAM</a></li>
@@ -73,7 +73,7 @@
           <div class="col-lg-7">
             <img src="Imagenes/espacios laborales.jpg" class="img-fluid">
           </div>
-          <div class= "col-lg-1">
+          <div class= "col-lg-1 border-right">
             <div class="d-flex h-100">
               <div class="align-self-center mx-auto">
                 <a href="#" class="text-light">
